student_04_eb4c38de2652/secure-gke/qwiklabs-gcp-04-5ee8d616e010/acm-repo/namespaces/bank-of-anthos/frontend/destinationrule-mtls-istio-mutual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-mtls-istio-mutual
  namespace: frontend
spec:
  host: frontend
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
