student_04_eb4c38de2652/secure-gke/qwiklabs-gcp-04-5ee8d616e010/acm-repo/namespaces/bank-of-anthos/frontend/authzpolicy-allow-all-sas.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-sas
  namespace: frontend
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["*"]
        - source:
            namespaces: ["*"]
